@@ -7,6 +7,7 @@ Version 1.0.4
 * Fix demigod and harpy shooting in incorrect directions.
 * Fix legacy pickup triggers not working in certain cases.
 * Fix lasersight always displaying with revolver and crossbow.
+* Fix rapid ammo spending in HK lasersight mode.
 * Fix incorrect string IDs for item combine, HK and revolver with lasersight.
 * Fix puzzle holes not swapping to puzzle done objects.
 * Fix several collision and sound source issues in flipped rooms.
